--- a/app/docs/components/TravelComponent.html
+++ b/app/docs/components/TravelComponent.html
@@ -759,7 +759,7 @@ export class TravelComponent {
   &lt;div class&#x3D;&quot;container&quot;&gt;
     &lt;div class&#x3D;&quot;heading&quot;&gt;
       &lt;h2 class&#x3D;&quot;js_trigger_map_marker&quot;&gt;Places I&#x27;ve been&lt;/h2&gt;
-      &lt;blockquote&gt;&quot;you have brains in your head. you have feet in your shoes.&lt;br&gt;you can steer yourself any direction you choose.&quot; - dr. seuss&lt;/blockquote&gt;
+      &lt;blockquote&gt;&quot;you have brains in your head. you have feet in your shoes. you can steer yourself any direction you choose.&quot; - dr. seuss&lt;/blockquote&gt;
     &lt;/div&gt;
   &lt;/div&gt;
   &lt;googlemap&gt;&lt;/googlemap&gt;
@@ -791,7 +791,7 @@ export class TravelComponent {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><!--travel start--><section class="travel" id="travel">  <div class="container">    <div class="heading">      <h2 class="js_trigger_map_marker">Places I\'ve been</h2>      <blockquote>"you have brains in your head. you have feet in your shoes.<br>you can steer yourself any direction you choose." - dr. seuss</blockquote>    </div>  </div>  <googlemap></googlemap></section><!--travel end--></div>'
+        var COMPONENT_TEMPLATE = '<div><!--travel start--><section class="travel" id="travel">  <div class="container">    <div class="heading">      <h2 class="js_trigger_map_marker">Places I\'ve been</h2>      <blockquote>"you have brains in your head. you have feet in your shoes. you can steer yourself any direction you choose." - dr. seuss</blockquote>    </div>  </div>  <googlemap></googlemap></section><!--travel end--></div>'
     var COMPONENTS = [{'name': 'AboutComponent', 'selector': 'about'},{'name': 'AppComponent', 'selector': 'container'},{'name': 'ContactComponent', 'selector': 'contact'},{'name': 'ContactFormComponent', 'selector': 'contact-form'},{'name': 'EducationComponent', 'selector': 'education'},{'name': 'ExperienceComponent', 'selector': 'experience'},{'name': 'FooterComponent', 'selector': 'footer'},{'name': 'HeaderComponent', 'selector': 'header'},{'name': 'SkillsComponent', 'selector': 'skills'},{'name': 'TravelComponent', 'selector': 'travel'},{'name': 'TravelMapComponent', 'selector': 'googlemap'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'TravelComponent'};
