--- a/app/docs/components/AppComponent.html
+++ b/app/docs/components/AppComponent.html
@@ -807,7 +807,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/components/app.ts:19</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/components/app.ts:19</a></div>
                                 </td>
                             </tr>
     
@@ -844,7 +844,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/components/app.ts:14</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/components/app.ts:14</a></div>
                                 </td>
                             </tr>
     
@@ -894,7 +894,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/components/app.ts:12</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/components/app.ts:12</a></div>
                                 </td>
                             </tr>
     
@@ -907,7 +907,7 @@
 
 
     <div class="tab-pane fade tab-source-code" id="c-source">
-        <pre class="line-numbers"><code class="language-typescript">import {Component, OnInit} from &#x27;@angular/core&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {Component, OnInit} from &#x27;@angular/core&#x27;;
 import {AppService} from &#x27;../services/app&#x27;;
 import {cancelableDelay} from &#x27;../../shared/common/delay&#x27;;
 import {elementInViewport} from &#x27;../../shared/common/element.in.viewport&#x27;;
