--- a/app/docs/components/ContactFormComponent.html
+++ b/app/docs/components/ContactFormComponent.html
@@ -932,7 +932,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="104" class="link-to-prism">src/contact/components/contact.form.ts:104</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="104" class="link-to-prism">src/contact/components/contact.form.ts:104</a></div>
                                 </td>
                             </tr>
     
@@ -1001,7 +1001,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="98" class="link-to-prism">src/contact/components/contact.form.ts:98</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="98" class="link-to-prism">src/contact/components/contact.form.ts:98</a></div>
                                 </td>
                             </tr>
     
@@ -1070,7 +1070,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="49" class="link-to-prism">src/contact/components/contact.form.ts:49</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="49" class="link-to-prism">src/contact/components/contact.form.ts:49</a></div>
                                 </td>
                             </tr>
     
@@ -1107,7 +1107,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="83" class="link-to-prism">src/contact/components/contact.form.ts:83</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="83" class="link-to-prism">src/contact/components/contact.form.ts:83</a></div>
                                 </td>
                             </tr>
     
@@ -1176,7 +1176,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="78" class="link-to-prism">src/contact/components/contact.form.ts:78</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="78" class="link-to-prism">src/contact/components/contact.form.ts:78</a></div>
                                 </td>
                             </tr>
     
@@ -1213,7 +1213,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="45" class="link-to-prism">src/contact/components/contact.form.ts:45</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="45" class="link-to-prism">src/contact/components/contact.form.ts:45</a></div>
                                 </td>
                             </tr>
     
@@ -1250,7 +1250,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="57" class="link-to-prism">src/contact/components/contact.form.ts:57</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="57" class="link-to-prism">src/contact/components/contact.form.ts:57</a></div>
                                 </td>
                             </tr>
     
@@ -1287,7 +1287,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="61" class="link-to-prism">src/contact/components/contact.form.ts:61</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="61" class="link-to-prism">src/contact/components/contact.form.ts:61</a></div>
                                 </td>
                             </tr>
     
@@ -1324,7 +1324,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="113" class="link-to-prism">src/contact/components/contact.form.ts:113</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="113" class="link-to-prism">src/contact/components/contact.form.ts:113</a></div>
                                 </td>
                             </tr>
     
@@ -1374,7 +1374,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="25" class="link-to-prism">src/contact/components/contact.form.ts:25</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="25" class="link-to-prism">src/contact/components/contact.form.ts:25</a></div>
                                 </td>
                             </tr>
     
@@ -1409,7 +1409,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/contact/components/contact.form.ts:14</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/contact/components/contact.form.ts:14</a></div>
                                 </td>
                             </tr>
     
@@ -1444,7 +1444,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/contact/components/contact.form.ts:15</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/contact/components/contact.form.ts:15</a></div>
                                 </td>
                             </tr>
     
@@ -1479,7 +1479,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/contact/components/contact.form.ts:16</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/contact/components/contact.form.ts:16</a></div>
                                 </td>
                             </tr>
     
@@ -1514,7 +1514,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/contact/components/contact.form.ts:17</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/contact/components/contact.form.ts:17</a></div>
                                 </td>
                             </tr>
     
@@ -1549,7 +1549,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/contact/components/contact.form.ts:18</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/contact/components/contact.form.ts:18</a></div>
                                 </td>
                             </tr>
     
@@ -1584,7 +1584,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/contact/components/contact.form.ts:19</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/contact/components/contact.form.ts:19</a></div>
                                 </td>
                             </tr>
     
@@ -1619,7 +1619,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="20" class="link-to-prism">src/contact/components/contact.form.ts:20</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="20" class="link-to-prism">src/contact/components/contact.form.ts:20</a></div>
                                 </td>
                             </tr>
     
@@ -1654,7 +1654,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="21" class="link-to-prism">src/contact/components/contact.form.ts:21</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="21" class="link-to-prism">src/contact/components/contact.form.ts:21</a></div>
                                 </td>
                             </tr>
     
@@ -1689,7 +1689,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">src/contact/components/contact.form.ts:22</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">src/contact/components/contact.form.ts:22</a></div>
                                 </td>
                             </tr>
     
@@ -1724,7 +1724,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="23" class="link-to-prism">src/contact/components/contact.form.ts:23</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="23" class="link-to-prism">src/contact/components/contact.form.ts:23</a></div>
                                 </td>
                             </tr>
     
@@ -1759,7 +1759,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="24" class="link-to-prism">src/contact/components/contact.form.ts:24</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="24" class="link-to-prism">src/contact/components/contact.form.ts:24</a></div>
                                 </td>
                             </tr>
     
@@ -1772,7 +1772,7 @@
 
 
     <div class="tab-pane fade tab-source-code" id="c-source">
-        <pre class="line-numbers"><code class="language-typescript">import {Component, OnInit} from &#x27;@angular/core&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {Component, OnInit} from &#x27;@angular/core&#x27;;
 import {FormGroup, FormControl, Validators, FormBuilder} from &#x27;@angular/forms&#x27;;
 import {ContactService} from &#x27;../services/contact&#x27;;
 import {IErrorMessage} from &#x27;../definitions/error.message&#x27;;
