--- a/app/docs/components/ExperienceComponent.html
+++ b/app/docs/components/ExperienceComponent.html
@@ -807,7 +807,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/experience/components/experience.ts:17</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/experience/components/experience.ts:17</a></div>
                                 </td>
                             </tr>
     
@@ -844,7 +844,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/experience/components/experience.ts:13</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/experience/components/experience.ts:13</a></div>
                                 </td>
                             </tr>
     
@@ -894,7 +894,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="11" class="link-to-prism">src/experience/components/experience.ts:11</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="11" class="link-to-prism">src/experience/components/experience.ts:11</a></div>
                                 </td>
                             </tr>
     
@@ -907,7 +907,7 @@
 
 
     <div class="tab-pane fade tab-source-code" id="c-source">
-        <pre class="line-numbers"><code class="language-typescript">import {Component, OnInit} from &#x27;@angular/core&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {Component, OnInit} from &#x27;@angular/core&#x27;;
 import {ExperienceService} from &#x27;../services/experience&#x27;;
 import {Job} from &#x27;../definitions/job&#x27;;
 
