--- a/app/docs/components/FooterComponent.html
+++ b/app/docs/components/FooterComponent.html
@@ -829,7 +829,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">src/footer/components/footer.ts:22</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">src/footer/components/footer.ts:22</a></div>
                                 </td>
                             </tr>
     
@@ -866,7 +866,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/footer/components/footer.ts:18</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/footer/components/footer.ts:18</a></div>
                                 </td>
                             </tr>
     
@@ -916,7 +916,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/footer/components/footer.ts:12</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/footer/components/footer.ts:12</a></div>
                                 </td>
                             </tr>
     
@@ -951,7 +951,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="11" class="link-to-prism">src/footer/components/footer.ts:11</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="11" class="link-to-prism">src/footer/components/footer.ts:11</a></div>
                                 </td>
                             </tr>
     
@@ -964,7 +964,7 @@
 
 
     <div class="tab-pane fade tab-source-code" id="c-source">
-        <pre class="line-numbers"><code class="language-typescript">import {Component, OnInit} from &#x27;@angular/core&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {Component, OnInit} from &#x27;@angular/core&#x27;;
 import {FooterService} from &#x27;../services/footer&#x27;;
 import {Link} from &#x27;../definitions/link&#x27;;
 
