--- a/app/docs/components/TravelMapComponent.html
+++ b/app/docs/components/TravelMapComponent.html
@@ -891,7 +891,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="103" class="link-to-prism">src/travel/components/travel.gmap.ts:103</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="103" class="link-to-prism">src/travel/components/travel.gmap.ts:103</a></div>
                                 </td>
                             </tr>
     
@@ -964,7 +964,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="65" class="link-to-prism">src/travel/components/travel.gmap.ts:65</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="65" class="link-to-prism">src/travel/components/travel.gmap.ts:65</a></div>
                                 </td>
                             </tr>
     
@@ -1001,7 +1001,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="87" class="link-to-prism">src/travel/components/travel.gmap.ts:87</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="87" class="link-to-prism">src/travel/components/travel.gmap.ts:87</a></div>
                                 </td>
                             </tr>
     
@@ -1038,7 +1038,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="60" class="link-to-prism">src/travel/components/travel.gmap.ts:60</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="60" class="link-to-prism">src/travel/components/travel.gmap.ts:60</a></div>
                                 </td>
                             </tr>
     
@@ -1088,7 +1088,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="30" class="link-to-prism">src/travel/components/travel.gmap.ts:30</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="30" class="link-to-prism">src/travel/components/travel.gmap.ts:30</a></div>
                                 </td>
                             </tr>
     
@@ -1123,7 +1123,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="32" class="link-to-prism">src/travel/components/travel.gmap.ts:32</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="32" class="link-to-prism">src/travel/components/travel.gmap.ts:32</a></div>
                                 </td>
                             </tr>
     
@@ -1146,19 +1146,19 @@
                     </tr>
                     <tr>
                         <td class="col-md-4">
-                            <span class="modifier-icon fa fa-reset"></span><code>_cruiseLines:     <code>Array&lt;Polyline&gt;</code>
+                            <span class="modifier-icon fa fa-reset"></span><code>_cruiseLines:     <code>Array&lt;Array&lt;Polyline&gt;&gt;</code>
     </code>
                         </td>
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                <i>Type : </i>    <code>Array&lt;Polyline&gt;</code>
+                                <i>Type : </i>    <code>Array&lt;Array&lt;Polyline&gt;&gt;</code>
     
                             </td>
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="33" class="link-to-prism">src/travel/components/travel.gmap.ts:33</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="33" class="link-to-prism">src/travel/components/travel.gmap.ts:33</a></div>
                                 </td>
                             </tr>
     
@@ -1181,19 +1181,19 @@
                     </tr>
                     <tr>
                         <td class="col-md-4">
-                            <span class="modifier-icon fa fa-reset"></span><code>_flightLines:     <code>Array&lt;Polyline&gt;</code>
+                            <span class="modifier-icon fa fa-reset"></span><code>_flightLines:     <code>Array&lt;Array&lt;Polyline&gt;&gt;</code>
     </code>
                         </td>
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                <i>Type : </i>    <code>Array&lt;Polyline&gt;</code>
+                                <i>Type : </i>    <code>Array&lt;Array&lt;Polyline&gt;&gt;</code>
     
                             </td>
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="34" class="link-to-prism">src/travel/components/travel.gmap.ts:34</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="34" class="link-to-prism">src/travel/components/travel.gmap.ts:34</a></div>
                                 </td>
                             </tr>
     
@@ -1228,7 +1228,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="35" class="link-to-prism">src/travel/components/travel.gmap.ts:35</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="35" class="link-to-prism">src/travel/components/travel.gmap.ts:35</a></div>
                                 </td>
                             </tr>
     
@@ -1263,7 +1263,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="36" class="link-to-prism">src/travel/components/travel.gmap.ts:36</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="36" class="link-to-prism">src/travel/components/travel.gmap.ts:36</a></div>
                                 </td>
                             </tr>
     
@@ -1298,7 +1298,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="31" class="link-to-prism">src/travel/components/travel.gmap.ts:31</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="31" class="link-to-prism">src/travel/components/travel.gmap.ts:31</a></div>
                                 </td>
                             </tr>
     
@@ -1333,7 +1333,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="37" class="link-to-prism">src/travel/components/travel.gmap.ts:37</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="37" class="link-to-prism">src/travel/components/travel.gmap.ts:37</a></div>
                                 </td>
                             </tr>
     
@@ -1368,7 +1368,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="39" class="link-to-prism">src/travel/components/travel.gmap.ts:39</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="39" class="link-to-prism">src/travel/components/travel.gmap.ts:39</a></div>
                                 </td>
                             </tr>
     
@@ -1403,7 +1403,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="38" class="link-to-prism">src/travel/components/travel.gmap.ts:38</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="38" class="link-to-prism">src/travel/components/travel.gmap.ts:38</a></div>
                                 </td>
                             </tr>
     
@@ -1438,7 +1438,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="40" class="link-to-prism">src/travel/components/travel.gmap.ts:40</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="40" class="link-to-prism">src/travel/components/travel.gmap.ts:40</a></div>
                                 </td>
                             </tr>
     
@@ -1473,7 +1473,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="41" class="link-to-prism">src/travel/components/travel.gmap.ts:41</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="41" class="link-to-prism">src/travel/components/travel.gmap.ts:41</a></div>
                                 </td>
                             </tr>
     
@@ -1508,7 +1508,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="42" class="link-to-prism">src/travel/components/travel.gmap.ts:42</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="42" class="link-to-prism">src/travel/components/travel.gmap.ts:42</a></div>
                                 </td>
                             </tr>
     
@@ -1531,19 +1531,19 @@
                     </tr>
                     <tr>
                         <td class="col-md-4">
-                            <span class="modifier-icon fa fa-reset"></span><code>_upcomingCruiseLines:     <code>Array&lt;Polyline&gt;</code>
+                            <span class="modifier-icon fa fa-reset"></span><code>_upcomingCruiseLines:     <code>Array&lt;Array&lt;Polyline&gt;&gt;</code>
     </code>
                         </td>
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                <i>Type : </i>    <code>Array&lt;Polyline&gt;</code>
+                                <i>Type : </i>    <code>Array&lt;Array&lt;Polyline&gt;&gt;</code>
     
                             </td>
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="43" class="link-to-prism">src/travel/components/travel.gmap.ts:43</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="43" class="link-to-prism">src/travel/components/travel.gmap.ts:43</a></div>
                                 </td>
                             </tr>
     
@@ -1566,19 +1566,19 @@
                     </tr>
                     <tr>
                         <td class="col-md-4">
-                            <span class="modifier-icon fa fa-reset"></span><code>_upcomingFlightLines:     <code>Array&lt;Polyline&gt;</code>
+                            <span class="modifier-icon fa fa-reset"></span><code>_upcomingFlightLines:     <code>Array&lt;Array&lt;Polyline&gt;&gt;</code>
     </code>
                         </td>
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                <i>Type : </i>    <code>Array&lt;Polyline&gt;</code>
+                                <i>Type : </i>    <code>Array&lt;Array&lt;Polyline&gt;&gt;</code>
     
                             </td>
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="44" class="link-to-prism">src/travel/components/travel.gmap.ts:44</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="44" class="link-to-prism">src/travel/components/travel.gmap.ts:44</a></div>
                                 </td>
                             </tr>
     
@@ -1613,7 +1613,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="29" class="link-to-prism">src/travel/components/travel.gmap.ts:29</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="29" class="link-to-prism">src/travel/components/travel.gmap.ts:29</a></div>
                                 </td>
                             </tr>
     
@@ -1626,7 +1626,7 @@
 
 
     <div class="tab-pane fade tab-source-code" id="c-source">
-        <pre class="line-numbers"><code class="language-typescript">import event &#x3D; google.maps.event;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import event &#x3D; google.maps.event;
 import Map &#x3D; google.maps.Map;
 import MapOptions &#x3D; google.maps.MapOptions;
 import Marker &#x3D; google.maps.Marker;
@@ -1658,8 +1658,8 @@ export class TravelMapComponent implements OnInit {
   private _additionalMarkerWait: number;
   private _markerDropWait: number;
   private _cityMarkers: Array&lt;Marker&gt;;
-  private _cruiseLines: Array&lt;Polyline&gt;;
-  private _flightLines: Array&lt;Polyline&gt;;
+  private _cruiseLines: Array&lt;Array&lt;Polyline&gt;&gt;;
+  private _flightLines: Array&lt;Array&lt;Polyline&gt;&gt;;
   private _mapMarkersDrawn: boolean;
   private _mapUtil: MapUtil;
   private _markerUtil: MarkerUtil;
@@ -1668,8 +1668,8 @@ export class TravelMapComponent implements OnInit {
   private _tilesLoaded: boolean;
   private _tilesLoadedEvent: any;
   private _timeoutScroll: any;
-  private _upcomingCruiseLines: Array&lt;Polyline&gt;;
-  private _upcomingFlightLines: Array&lt;Polyline&gt;;
+  private _upcomingCruiseLines: Array&lt;Array&lt;Polyline&gt;&gt;;
+  private _upcomingFlightLines: Array&lt;Array&lt;Polyline&gt;&gt;;
 
   constructor() {
     this._additionalMarkerWait &#x3D; 0;
