--- a/app/docs/components/AboutComponent.html
+++ b/app/docs/components/AboutComponent.html
@@ -741,7 +741,7 @@
 
 
     <div class="tab-pane fade tab-source-code" id="c-source">
-        <pre class="line-numbers"><code class="language-typescript">import {Component} from &#x27;@angular/core&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {Component} from &#x27;@angular/core&#x27;;
 
 @Component({
   selector: &#x27;about&#x27;,
