--- a/app/docs/components/EducationComponent.html
+++ b/app/docs/components/EducationComponent.html
@@ -866,7 +866,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="31" class="link-to-prism">src/education/components/education.ts:31</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="31" class="link-to-prism">src/education/components/education.ts:31</a></div>
                                 </td>
                             </tr>
     
@@ -903,7 +903,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="25" class="link-to-prism">src/education/components/education.ts:25</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="25" class="link-to-prism">src/education/components/education.ts:25</a></div>
                                 </td>
                             </tr>
     
@@ -940,7 +940,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="20" class="link-to-prism">src/education/components/education.ts:20</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="20" class="link-to-prism">src/education/components/education.ts:20</a></div>
                                 </td>
                             </tr>
     
@@ -990,7 +990,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/education/components/education.ts:14</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/education/components/education.ts:14</a></div>
                                 </td>
                             </tr>
     
@@ -1025,7 +1025,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/education/components/education.ts:13</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/education/components/education.ts:13</a></div>
                                 </td>
                             </tr>
     
@@ -1060,7 +1060,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/education/components/education.ts:12</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/education/components/education.ts:12</a></div>
                                 </td>
                             </tr>
     
@@ -1073,7 +1073,7 @@
 
 
     <div class="tab-pane fade tab-source-code" id="c-source">
-        <pre class="line-numbers"><code class="language-typescript">import {Component, OnInit} from &#x27;@angular/core&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {Component, OnInit} from &#x27;@angular/core&#x27;;
 import {EducationService} from &#x27;../services/education&#x27;;
 import {School} from &#x27;../definitions/school&#x27;;
 import {CodeSchool} from &#x27;../definitions/code.school&#x27;;
