--- a/app/docs/components/HeaderComponent.html
+++ b/app/docs/components/HeaderComponent.html
@@ -886,7 +886,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="43" class="link-to-prism">src/header/components/header.ts:43</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="43" class="link-to-prism">src/header/components/header.ts:43</a></div>
                                 </td>
                             </tr>
     
@@ -955,7 +955,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="28" class="link-to-prism">src/header/components/header.ts:28</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="28" class="link-to-prism">src/header/components/header.ts:28</a></div>
                                 </td>
                             </tr>
     
@@ -992,7 +992,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="58" class="link-to-prism">src/header/components/header.ts:58</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="58" class="link-to-prism">src/header/components/header.ts:58</a></div>
                                 </td>
                             </tr>
     
@@ -1029,7 +1029,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="35" class="link-to-prism">src/header/components/header.ts:35</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="35" class="link-to-prism">src/header/components/header.ts:35</a></div>
                                 </td>
                             </tr>
     
@@ -1066,7 +1066,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="23" class="link-to-prism">src/header/components/header.ts:23</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="23" class="link-to-prism">src/header/components/header.ts:23</a></div>
                                 </td>
                             </tr>
     
@@ -1103,7 +1103,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="76" class="link-to-prism">src/header/components/header.ts:76</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="76" class="link-to-prism">src/header/components/header.ts:76</a></div>
                                 </td>
                             </tr>
     
@@ -1192,7 +1192,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="101" class="link-to-prism">src/header/components/header.ts:101</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="101" class="link-to-prism">src/header/components/header.ts:101</a></div>
                                 </td>
                             </tr>
     
@@ -1242,7 +1242,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/header/components/header.ts:14</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/header/components/header.ts:14</a></div>
                                 </td>
                             </tr>
     
@@ -1277,7 +1277,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/header/components/header.ts:17</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/header/components/header.ts:17</a></div>
                                 </td>
                             </tr>
     
@@ -1312,7 +1312,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/header/components/header.ts:16</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/header/components/header.ts:16</a></div>
                                 </td>
                             </tr>
     
@@ -1347,7 +1347,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/header/components/header.ts:15</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/header/components/header.ts:15</a></div>
                                 </td>
                             </tr>
     
@@ -1382,7 +1382,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/header/components/header.ts:13</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/header/components/header.ts:13</a></div>
                                 </td>
                             </tr>
     
@@ -1395,7 +1395,7 @@
 
 
     <div class="tab-pane fade tab-source-code" id="c-source">
-        <pre class="line-numbers"><code class="language-typescript">import {Component, OnInit} from &#x27;@angular/core&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {Component, OnInit} from &#x27;@angular/core&#x27;;
 import {HeaderService} from &#x27;../services/header&#x27;;
 import {MENU_CONFIG, GRID_ROTATOR_CONFIG} from &#x27;../models/header.config&#x27;;
 import {ImageIds} from &#x27;../definitions/image.ids&#x27;;
