--- a/app/docs/components/SkillsComponent.html
+++ b/app/docs/components/SkillsComponent.html
@@ -839,7 +839,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="55" class="link-to-prism">src/skills/components/skills.ts:55</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="55" class="link-to-prism">src/skills/components/skills.ts:55</a></div>
                                 </td>
                             </tr>
     
@@ -876,7 +876,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="26" class="link-to-prism">src/skills/components/skills.ts:26</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="26" class="link-to-prism">src/skills/components/skills.ts:26</a></div>
                                 </td>
                             </tr>
     
@@ -913,7 +913,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="35" class="link-to-prism">src/skills/components/skills.ts:35</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="35" class="link-to-prism">src/skills/components/skills.ts:35</a></div>
                                 </td>
                             </tr>
     
@@ -950,7 +950,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="21" class="link-to-prism">src/skills/components/skills.ts:21</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="21" class="link-to-prism">src/skills/components/skills.ts:21</a></div>
                                 </td>
                             </tr>
     
@@ -1000,7 +1000,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/skills/components/skills.ts:15</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/skills/components/skills.ts:15</a></div>
                                 </td>
                             </tr>
     
@@ -1035,7 +1035,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/skills/components/skills.ts:14</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/skills/components/skills.ts:14</a></div>
                                 </td>
                             </tr>
     
@@ -1070,7 +1070,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/skills/components/skills.ts:13</a></div>
+                                        <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/skills/components/skills.ts:13</a></div>
                                 </td>
                             </tr>
     
@@ -1083,7 +1083,7 @@
 
 
     <div class="tab-pane fade tab-source-code" id="c-source">
-        <pre class="line-numbers"><code class="language-typescript">import {Component, OnInit} from &#x27;@angular/core&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {Component, OnInit} from &#x27;@angular/core&#x27;;
 import {SkillService} from &#x27;../services/skills&#x27;;
 import {Skill} from &#x27;../definitions/skill&#x27;;
 import {cancelableDelay} from &#x27;../../shared/common/delay&#x27;;
